# Snack

./: RDD.md  README.md
.github/: labeler.yml
.github/workflows/: labeler.yml
backend/: README.md  go.mod  go.sum  main.go
backend/adaptor/service_server/: event_service.go  member_service.go  message_service.go  user_handler.go  user_service.go
backend/cmd/: main.go
backend/domain/model/: event.go  user.go
backend/driver/: grpc.go
backend/driver/env/: env_loader.go  env_loader_test.go
backend/internal/driver/: config.go  grpc.go
backend/logic/bto/: request.go
desktop/: .eslintrc.json  .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
desktop/snack_api_rs/: build.rs
desktop/src/: main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/channel/: mod.rs  query.rs  schema.rs
desktop/src-tauri/src/message/: query.rs  schema.rs
desktop/src-tauri/src/plugins/: log.rs  mod.rs  store.rs
desktop/src-tauri/src/services/message/: command.rs
desktop/src-tauri/src/services/user/: command.rs  schema.rs
desktop/src-tauri/src/services/user_group/: schema.rs
desktop/src-tauri/src/system_tray/: mod.rs
desktop/src-tauri/src/user/: query.rs
docs/: architecture.md  development_flow.md  rpc_connection.md
docs/draw.oi/: architecture.dio  rpc_connection.dio
docs/drawio/: rpc_connection_initialization.dio
protobuf/: README.md  package.json  server_status.proto
snack_api_rs/: Cargo.toml  build.rs
snack_api_rs/src/: api.rs
(+76 files in other folders)
