[package]
name = "snack_desktop"
version = "0.1.0"
description = "Snack - RCC Internal Messenger Application "
authors = ["ritscc"]
license = ""
repository = "https://github.com/ritscc/Snack"
default-run = "snack_desktop"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
snack_api_rs = { path = "../snack_api_rs" }
tonic = "0.10"
prost = "0.12"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-invoke-http = { git = "https://github.com/tauri-apps/tauri-invoke-http", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
